test/ui/parsing/parametrized-modules.lushui
;;; FIXME: Report two parse errors here instead of just one.

module generic 'A [Schema A] (knob: Nat) (dial: Nat) of

module external (configuration: Configuration)
